# RainPotsProject

./: README.md
RainPotsBoards_Kicad/project-libraries/24LC32AT-I_SN/: 24LC32AT-I_SN.kicad_sym  24LC32AT-I_SN.lib  SOIC127P794X203-8N.kicad_mod
RaspberryPi/: .gitignore  README.md  documentation.txt  main.py  rainpots.service  rainpots_configure.py
RaspberryPi/RainPots/: OscListener.py  OscSender.py  Parameters.py  SerialSender.py
RaspberryPiPico/: CMakeLists.txt  README.md  RainPots.cpp  RainPots.h  include_project_files.cmake  shift_in_out.pio
RaspberryPiPico/source_files/24LC32/inc/: 24LC32.h
RaspberryPiPico/source_files/24LC32/src/: 24LC32.cpp
RaspberryPiPico/source_files/ADS1X15/inc/: ADS1X15.h
RaspberryPiPico/source_files/ADS1X15/src/: ADS1X15.cpp
RaspberryPiPico/source_files/BoardManager/inc/: BoardManager.h
RaspberryPiPico/source_files/BoardManager/src/: BoardManager.cpp
RaspberryPiPico/source_files/DataFormatter/inc/: DataFormatter.h
RaspberryPiPico/source_files/DataFormatter/src/: DataFormatter.cpp
RaspberryPiPico/source_files/I2C/inc/: I2cController.h  I2cPeripheral.h
RaspberryPiPico/source_files/I2C/src/: I2cController.cpp  I2cPeripheral.cpp
RaspberryPiPico/source_files/InputCtl/inc/: InputCtl.h
RaspberryPiPico/source_files/InputCtl/src/: InputCtl.cpp
RaspberryPiPico/source_files/PotiCtl/inc/: PotiCtl.h
RaspberryPiPico/source_files/PotiCtl/src/: PotiCtl.cpp
RaspberryPiPico/source_files/RpConfig/inc/: RpConfig.h
RaspberryPiPico/source_files/RpConfig/src/: RpConfig.cpp
(+76 files in other folders)
